<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertProfileActivity"
    android:orientation="vertical">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_view"
    tools:ignore="UselessParent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:id="@+id/imagelogo"
        android:src="@drawable/wedetlogo"
        tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_please_enter_your_profile"
            android:textAlignment="center"
            android:textStyle="italic|bold"
            android:textSize="34sp"
            android:layout_below="@+id/imagelogo"/>
</RelativeLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"
            android:id="@+id/firstname"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"
            android:id="@+id/lastname"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"
            android:id="@+id/EmailId"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phonenumber"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"
            android:enabled="false"
            android:focusable="false"
            android:id="@+id/phoneofuser"/>
    </com.google.android.material.textfield.TextInputLayout>
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp">
      <androidx.appcompat.widget.AppCompatCheckBox
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/CheckBox"
         android:gravity="center"
          android:layout_marginStart="90dp" />
      <TextView
          android:layout_marginTop="5dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/i_agree_to_the_terms_of_service"
          android:layout_toEndOf="@id/CheckBox"
          android:gravity="center"
          android:textAlignment="center"
          android:layout_gravity="center"/>
  </RelativeLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/create"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_shape"/>
</LinearLayout>